[package]
name = "buy_me_a_coffee"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.41.0", features = ["full"] }
