[package]
name = "buy_me_a_coffee"
version = "0.1.0"
authors = ["Valentine Briese <valentinegb@icloud.com>"]
edition = "2021"
description = "A Rust crate for interacting with the Buy Me a Coffee API"
repository = "https://github.com/valentinegb/buy-me-a-coffee-rs"
license = "MIT"
categories = ["api-bindings"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.41.0", features = ["full"] }
